--- a/themes/tale/layouts/partials/head.html
+++ b/themes/tale/layouts/partials/head.html
@@ -6,7 +6,7 @@
 		{{- else if .Description }}
 			<meta name="description" content="{{ .Description }}">
 		{{- end }}
-	
+
 		<title>
 			{{- if eq .URL "/" }}
 				{{ .Site.Title }}
@@ -14,21 +14,21 @@
 				{{ .Title }} &middot; {{ .Site.Title }}
 			{{- end }}
 		</title>
-	
+
 		<!-- CSS -->
 		{{- $inServerMode	:= .Site.IsServer }}
 		{{- $cssTarget		:= "css/style.css" }}
-		{{- $cssOptions		:= cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}		
+		{{- $productionCssTarget := "forrestry-hugo-demo/css/style.css" }}
+		{{- $cssOptions		:= cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $productionCssTarget "outputStyle" "compressed") }}
 		{{- $style			:= resources.Get "scss/tale.scss" | toCSS $cssOptions }}
   		<link rel="stylesheet" href="{{ $style.RelPermalink }}">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
-	
+
 		<!-- Favicon -->
 		<link rel="icon" type="image/png" sizes="32x32" href="{{ "images/favicon-32x32.png" | relURL }}">
 		<link rel="icon" type="image/png" sizes="16x16" href="{{ "images/favicon-16x16.png" | relURL }}">
 		<link rel="apple-touch-icon" sizes="180x180" href="{{ "images/apple-touch-icon.png" | relURL }}">
-	
+
 		<!-- RSS -->
 		<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 	</head>
-	
