--- a/themes/dracula/assets/scss/dracula.scss
+++ b/themes/dracula/assets/scss/dracula.scss
@@ -1,4 +1,4 @@
-@import "vendor/normalize.css";
+@import "vendor/normalize";
 @import "dracula/colors";
 @import "dracula/syntax-highlighting";
 @import "dracula/theme";
